lab3/yaml/ingress-lab3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: lab3ns
  name: lab3-ingress
spec:
  tls:
  - hosts:
      - lab3.ivan
    secretName: lab3-tls
  rules:
  - host: lab3.ivan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lab3-service
            port:
              number: 3000
